--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es.json
@@ -36,7 +36,7 @@
     "MessageKeyUpdated": "Gracias. Su clave de seguidor ha sido actualizada.",
     "MessageKeyRemoved": "Gracias. Su clave de seguidor ha sido eliminada.",
     "HeaderSupportTheTeam": "Support the Emby Team",
-    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
+    "TextEnjoyBonusFeatures": "Disfrute los extras",
     "TitleLiveTV": "Tv en vivo",
     "TitleSync": "Sync",
     "ButtonDonate": "Donate",
@@ -46,7 +46,7 @@
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
     "HeaderConfirmRemoveUser": "Remove User",
-    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Select the device to control by clicking the cast icon in the upper right corner. Swipe down anywhere on this screen to go back to where you came from.",
     "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
     "ValueTimeLimitSingleHour": "Time limit: 1 hour",
     "ValueTimeLimitMultiHour": "Time limit: {0} hours",
@@ -70,7 +70,7 @@
     "LabelSeries": "Series",
     "LabelStopping": "Deteniendo",
     "LabelCancelled": "(cancelado)",
-    "LabelFailed": "(failed)",
+    "LabelFailed": "(fallido)",
     "ButtonHelp": "Help",
     "ButtonSave": "Grabar",
     "ButtonDownload": "Descargar",
@@ -85,7 +85,7 @@
     "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "A\u00f1adir a la colecci\u00f3n",
-    "NewCollectionNameExample": "Ejemplo: Star Wars Colecci\u00f3n",
+    "NewCollectionNameExample": "Ejemplo: Colecci\u00f3n de Star Wars",
     "OptionSearchForInternetMetadata": "Buscar en internet ilustraciones y metadatos",
     "LabelSelectCollection": "Seleccionar colecci\u00f3n:",
     "HeaderDevices": "Devices",
@@ -94,11 +94,11 @@
     "ButtonAddToCollection": "Add to collection",
     "HeaderSelectCertificatePath": "Select Certificate Path",
     "ConfirmMessageScheduledTaskButton": "This operation normally runs automatically as a scheduled task. It can also be run manually here. To configure the scheduled task, see:",
-    "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to sync, premium plugins, internet channel content, and more. {0}Learn more{1}.",
+    "HeaderSupporterBenefit": "Una membres\u00eda de soporte provee beneficios adicionales como acceso a Sync (Sincronizar), extensiones premium, contenidos de canales por internet, y mas. {0}Aprender m\u00e1s{1}.",
     "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
     "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
     "HeaderWelcomeToProjectWebClient": "Welcome to the Emby Web Client",
-    "ButtonTakeTheTour": "Take the tour",
+    "ButtonTakeTheTour": "Hacer u n recorrido",
     "HeaderWelcomeBack": "Welcome back!",
     "TitlePlugins": "Plugins",
     "ButtonTakeTheTourToSeeWhatsNew": "Take the tour to see what's new",
@@ -138,14 +138,14 @@
     "ButtonMute": "Silencio",
     "ButtonUnmute": "Activar audio",
     "ButtonStop": "Detener",
-    "ButtonNextTrack": "Next Track",
+    "ButtonNextTrack": "Tema Siguiente",
     "ButtonPause": "Pausa",
     "ButtonPlay": "Reproducir",
     "ButtonEdit": "Editar",
     "ButtonQueue": "En cola",
-    "ButtonPlayTrailer": "Play trailer",
+    "ButtonPlayTrailer": "Iniciar cortos",
     "ButtonPlaylist": "Lista de reproducci\u00f3n",
-    "ButtonPreviousTrack": "Previous Track",
+    "ButtonPreviousTrack": "Tema Anterior",
     "LabelEnabled": "Activado",
     "LabelDisabled": "Desactivado",
     "ButtonMoreInformation": "M\u00e1s informaci\u00f3n",
@@ -403,8 +403,8 @@
     "TabAdvanced": "Avanzado",
     "TabHelp": "Help",
     "TabScheduledTasks": "Scheduled Tasks",
-    "ButtonFullscreen": "Fullscreen",
-    "ButtonAudioTracks": "Audio Tracks",
+    "ButtonFullscreen": "Pantalla Completa",
+    "ButtonAudioTracks": "Pistas de Audio",
     "ButtonSubtitles": "Subt\u00edtulos",
     "ButtonScenes": "Escenas",
     "ButtonQuality": "Quality",
@@ -432,6 +432,7 @@
     "HeaderVideo": "Video",
     "HeaderRuntime": "Runtime",
     "HeaderCommunityRating": "Community rating",
+    "HeaderPasswordReset": "Password Reset",
     "HeaderParentalRating": "Parental rating",
     "HeaderReleaseDate": "Release date",
     "HeaderDateAdded": "Date added",
@@ -476,7 +477,7 @@
     "PersonTypePerson": "Person",
     "LabelTitleDisplayOrder": "Title display order:",
     "OptionSortName": "Sort name",
-    "OptionReleaseDate": "Release date",
+    "OptionReleaseDate": "Fecha de estreno",
     "LabelSeasonNumber": "Temporada n\u00famero:",
     "LabelDiscNumber": "Disc number",
     "LabelParentNumber": "Parent number",
@@ -620,7 +621,7 @@
     "HeaderAlbums": "Albums",
     "HeaderGames": "Games",
     "HeaderBooks": "Books",
-    "HeaderEpisodes": "Episodes",
+    "HeaderEpisodes": "Episodios",
     "HeaderSeasons": "Seasons",
     "HeaderTracks": "Tracks",
     "HeaderItems": "Items",
@@ -755,5 +756,11 @@
     "SyncJobItemStatusRemovedFromDevice": "Removed from device",
     "SyncJobItemStatusCancelled": "Cancelled",
     "LabelProfile": "Profile:",
-    "LabelBitrateMbps": "Bitrate (Mbps):"
+    "LabelBitrateMbps": "Bitrate (Mbps):",
+    "EmbyIntroDownloadMessage": "To download and install Emby Server visit {0}.",
+    "ButtonNewServer": "New Server",
+    "ButtonSignInWithConnect": "Sign in with Emby Connect",
+    "HeaderNewServer": "New Server",
+    "MyDevice": "My Device",
+    "ButtonRemote": "Remote"
 }
