--- a/MediaBrowser.Server.Implementations/Localization/Server/fi.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fi.json
@@ -1,104 +1,5 @@
 {
-    "LabelExit": "Poistu",
-    "LabelVisitCommunity": "K\u00e4y Yhteis\u00f6ss\u00e4",
-    "LabelGithub": "Github",
-    "LabelSwagger": "Swagger",
-    "LabelStandard": "Normaali",
-    "LabelApiDocumentation": "Api Documentation",
-    "LabelDeveloperResources": "Developer Resources",
-    "LabelBrowseLibrary": "Selaa Kirjastoa",
-    "LabelConfigureServer": "Configure Emby",
-    "LabelOpenLibraryViewer": "Avaa Library Viewer",
-    "LabelRestartServer": "K\u00e4ynnist\u00e4 Palvelin uudelleen",
-    "LabelShowLogWindow": "N\u00e4yt\u00e4 Loki Ikkuna",
-    "LabelPrevious": "Edellinen",
-    "LabelFinish": "Valmis",
-    "LabelNext": "Seuraava",
-    "LabelYoureDone": "Olet valmis!",
-    "WelcomeToProject": "Welcome to Emby!",
-    "ThisWizardWillGuideYou": "T\u00e4m\u00e4 ty\u00f6kalu auttaa sinua asennus prosessin aikana. loittaaksesi valitse kieli.",
-    "TellUsAboutYourself": "Kerro meille itsest\u00e4si",
-    "ButtonQuickStartGuide": "Quick start guide",
-    "LabelYourFirstName": "Sinun ensimm\u00e4inen nimi:",
-    "MoreUsersCanBeAddedLater": "K\u00e4ytt\u00e4ji\u00e4 voi lis\u00e4t\u00e4 lis\u00e4\u00e4 my\u00f6hemmin Dashboardista",
-    "UserProfilesIntro": "Emby includes built-in support for user profiles, enabling each user to have their own display settings, playstate and parental controls.",
-    "LabelWindowsService": "Windows Service",
-    "AWindowsServiceHasBeenInstalled": "Windows Service on asennettu.",
-    "WindowsServiceIntro1": "Emby Server normally runs as a desktop application with a tray icon, but if you prefer to run it as a background service, it can be started from the windows services control panel instead.",
-    "WindowsServiceIntro2": "Jos k\u00e4yt\u00e4t windows service\u00e4, ole hyv\u00e4 ja ota huomioon ettet voi k\u00e4ytt\u00e4\u00e4 ohjelmaa yht\u00e4aikaa teht\u00e4v\u00e4palkissa ja servicen\u00e4, joten sinun t\u00e4ytyy sulkea teht\u00e4v\u00e4palkin ikoni ensin kuin voit k\u00e4ytt\u00e4\u00e4 palvelinta servicen kautta. Service pit\u00e4\u00e4 konfiguroida my\u00f6s j\u00e4rjestelm\u00e4nvalvojan oikeuksilla ohjaus paneelista. Ota my\u00f6s huomioon, ett\u00e4 ohjelma pit\u00e4\u00e4 my\u00f6s p\u00e4ivitt\u00e4\u00e4 service palvelussa manuaalisesti.",
-    "WizardCompleted": "That's all we need for now. Emby has begun collecting information about your media library. Check out some of our apps, and then click <b>Finish<\/b> to view the <b>Server Dashboard<\/b>.",
-    "LabelConfigureSettings": "Muuta asetuksia",
-    "LabelEnableVideoImageExtraction": "Ota video kuvan purku k\u00e4ytt\u00f6\u00f6n",
-    "VideoImageExtractionHelp": "Videot jotka eiv\u00e4t sisll\u00e4 valmiiksi kuvaa ja emme voi lis\u00e4t\u00e4 kuvaa automaattisesti internetist\u00e4. T\u00e4m\u00e4 lis\u00e4\u00e4 v\u00e4h\u00e4n lataus aikaa kirjaston tarkastuksessa.",
-    "LabelEnableChapterImageExtractionForMovies": "Valitse luvun kuva Elokuville",
-    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
-    "LabelEnableAutomaticPortMapping": "Ota automaattinen porttien mapping k\u00e4ytt\u00f6\u00f6n",
-    "LabelEnableAutomaticPortMappingHelp": "UPnP sallii automaattisen reitittimen asetusten muuttamisen. T\u00e4m\u00e4 ei mahdollisesti toimi joidenkin retititin mallien kanssa.",
-    "HeaderTermsOfService": "Emby Terms of Service",
-    "MessagePleaseAcceptTermsOfService": "Please accept the terms of service and privacy policy before continuing.",
-    "OptionIAcceptTermsOfService": "I accept the terms of service",
-    "ButtonPrivacyPolicy": "Privacy policy",
-    "ButtonTermsOfService": "Terms of Service",
-    "HeaderDeveloperOptions": "Developer Options",
-    "OptionEnableWebClientResponseCache": "Enable web client response caching",
-    "OptionDisableForDevelopmentHelp": "Configure these as needed for web client development purposes.",
-    "OptionEnableWebClientResourceMinification": "Enable web client resource minification",
-    "LabelDashboardSourcePath": "Web client source path:",
-    "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
-    "ButtonConvertMedia": "Convert media",
-    "ButtonOrganize": "Organize",
-    "LinkedToEmbyConnect": "Linked to Emby Connect",
-    "HeaderSupporterBenefits": "Supporter Benefits",
-    "HeaderAddUser": "Add User",
-    "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
-    "LabelPinCode": "Pin code:",
-    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
-    "HeaderSync": "Sync",
-    "ButtonOk": "Ok",
-    "ButtonCancel": "Lopeta",
-    "ButtonExit": "Exit",
-    "ButtonNew": "New",
-    "HeaderTV": "TV",
-    "HeaderAudio": "Audio",
-    "HeaderVideo": "Video",
-    "HeaderPaths": "Paths",
-    "CategorySync": "Sync",
-    "TabPlaylist": "Playlist",
-    "HeaderEasyPinCode": "Easy Pin Code",
-    "HeaderGrownupsOnly": "Grown-ups Only!",
-    "DividerOr": "-- or --",
-    "HeaderInstalledServices": "Installed Services",
-    "HeaderAvailableServices": "Available Services",
-    "MessageNoServicesInstalled": "No services are currently installed.",
-    "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
-    "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
-    "ButtonConfigurePinCode": "Configure pin code",
-    "HeaderAdultsReadHere": "Adults Read Here!",
-    "RegisterWithPayPal": "Register with PayPal",
-    "HeaderSyncRequiresSupporterMembership": "Sync Requires a Supporter Membership",
-    "HeaderEnjoyDayTrial": "Enjoy a 14 Day Free Trial",
-    "LabelSyncTempPath": "Temporary file path:",
-    "LabelSyncTempPathHelp": "Specify a custom sync working folder. Converted media created during the sync process will be stored here.",
-    "LabelCustomCertificatePath": "Custom certificate path:",
-    "LabelCustomCertificatePathHelp": "Supply your own ssl certificate .pfx file. If omitted, the server will create a self-signed certificate.",
-    "TitleNotifications": "Notifications",
-    "ButtonDonateWithPayPal": "Donate with PayPal",
-    "OptionDetectArchiveFilesAsMedia": "Detect archive files as media",
-    "OptionDetectArchiveFilesAsMediaHelp": "If enabled, files with .rar and .zip extensions will be detected as media files.",
-    "LabelEnterConnectUserName": "User name or email:",
-    "LabelEnterConnectUserNameHelp": "This is your Emby online account user name or password.",
-    "LabelEnableEnhancedMovies": "Enable enhanced movie displays",
-    "LabelEnableEnhancedMoviesHelp": "When enabled, movies will be displayed as folders to include trailers, extras, cast & crew, and other related content.",
-    "HeaderSyncJobInfo": "Sync Job",
-    "FolderTypeMixed": "Mixed content",
-    "FolderTypeMovies": "Movies",
-    "FolderTypeMusic": "Music",
-    "FolderTypeAdultVideos": "Adult videos",
-    "FolderTypePhotos": "Photos",
-    "FolderTypeMusicVideos": "Music videos",
-    "FolderTypeHomeVideos": "Home videos",
-    "FolderTypeGames": "Games",
-    "FolderTypeBooks": "Books",
+    "TabWebClient": "Web Client",
     "FolderTypeTvShows": "TV",
     "FolderTypeInherit": "Inherit",
     "LabelContentType": "Content type:",
@@ -797,6 +698,7 @@
     "LabelMaxBitrateHelp": "Specify a max bitrate in bandwidth constrained environments, or if the device imposes it's own limit.",
     "LabelMaxStreamingBitrate": "Max streaming bitrate:",
     "LabelMaxStreamingBitrateHelp": "Specify a max bitrate when streaming.",
+    "LabelMaxChromecastBitrate": "Max Chromecast bitrate:",
     "LabelMaxStaticBitrate": "Max sync bitrate:",
     "LabelMaxStaticBitrateHelp": "Specify a max bitrate when syncing content at high quality.",
     "LabelMusicStaticBitrate": "Music sync bitrate:",
@@ -872,7 +774,7 @@
     "MessageNoSubtitleSearchResultsFound": "No search results founds.",
     "TabDisplay": "Display",
     "TabLanguages": "Languages",
-    "TabWebClient": "Web Client",
+    "TabAppSettings": "App Settings",
     "LabelEnableThemeSongs": "Enable theme songs",
     "LabelEnableBackdrops": "Enable backdrops",
     "LabelEnableThemeSongsHelp": "If enabled, theme songs will be played in the background while browsing the library.",
@@ -1416,6 +1318,120 @@
     "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
     "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences.",
     "HeaderViewStyles": "View Styles",
-    "LabelSelectViewStyles": "Enable rich presentations for:",
-    "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders."
+    "LabelSelectViewStyles": "Enable enhanced presentations for:",
+    "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders.",
+    "TabPhotos": "Photos",
+    "TabVideos": "Videos",
+    "HeaderWelcomeToEmby": "Welcome to Emby",
+    "EmbyIntroMessage": "With Emby you can easily stream videos, music and photos to smart phones, tablets and other devices from your Emby Server.",
+    "ButtonSkip": "Skip",
+    "TextConnectToServerManually": "Connect to server manually",
+    "ButtonSignInWithConnect": "Sign in with Emby Connect",
+    "ButtonConnect": "Connect",
+    "LabelServerHost": "Host:",
+    "LabelServerHostHelp": "192.168.1.100 or https:\/\/myserver.com",
+    "LabelServerPort": "Port:",
+    "HeaderNewServer": "New Server",
+    "ButtonChangeServer": "Change Server",
+    "HeaderConnectToServer": "Connect to Server",
+    "LabelExit": "Poistu",
+    "LabelVisitCommunity": "K\u00e4y Yhteis\u00f6ss\u00e4",
+    "LabelGithub": "Github",
+    "LabelSwagger": "Swagger",
+    "LabelStandard": "Normaali",
+    "LabelApiDocumentation": "Api Documentation",
+    "LabelDeveloperResources": "Developer Resources",
+    "LabelBrowseLibrary": "Selaa Kirjastoa",
+    "LabelConfigureServer": "Configure Emby",
+    "LabelOpenLibraryViewer": "Avaa Library Viewer",
+    "LabelRestartServer": "K\u00e4ynnist\u00e4 Palvelin uudelleen",
+    "LabelShowLogWindow": "N\u00e4yt\u00e4 Loki Ikkuna",
+    "LabelPrevious": "Edellinen",
+    "LabelFinish": "Valmis",
+    "LabelNext": "Seuraava",
+    "LabelYoureDone": "Olet valmis!",
+    "WelcomeToProject": "Welcome to Emby!",
+    "ThisWizardWillGuideYou": "T\u00e4m\u00e4 ty\u00f6kalu auttaa sinua asennus prosessin aikana. loittaaksesi valitse kieli.",
+    "TellUsAboutYourself": "Kerro meille itsest\u00e4si",
+    "ButtonQuickStartGuide": "Quick start guide",
+    "LabelYourFirstName": "Sinun ensimm\u00e4inen nimi:",
+    "MoreUsersCanBeAddedLater": "K\u00e4ytt\u00e4ji\u00e4 voi lis\u00e4t\u00e4 lis\u00e4\u00e4 my\u00f6hemmin Dashboardista",
+    "UserProfilesIntro": "Emby includes built-in support for user profiles, enabling each user to have their own display settings, playstate and parental controls.",
+    "LabelWindowsService": "Windows Service",
+    "AWindowsServiceHasBeenInstalled": "Windows Service on asennettu.",
+    "WindowsServiceIntro1": "Emby Server normally runs as a desktop application with a tray icon, but if you prefer to run it as a background service, it can be started from the windows services control panel instead.",
+    "WindowsServiceIntro2": "Jos k\u00e4yt\u00e4t windows service\u00e4, ole hyv\u00e4 ja ota huomioon ettet voi k\u00e4ytt\u00e4\u00e4 ohjelmaa yht\u00e4aikaa teht\u00e4v\u00e4palkissa ja servicen\u00e4, joten sinun t\u00e4ytyy sulkea teht\u00e4v\u00e4palkin ikoni ensin kuin voit k\u00e4ytt\u00e4\u00e4 palvelinta servicen kautta. Service pit\u00e4\u00e4 konfiguroida my\u00f6s j\u00e4rjestelm\u00e4nvalvojan oikeuksilla ohjaus paneelista. Ota my\u00f6s huomioon, ett\u00e4 ohjelma pit\u00e4\u00e4 my\u00f6s p\u00e4ivitt\u00e4\u00e4 service palvelussa manuaalisesti.",
+    "WizardCompleted": "That's all we need for now. Emby has begun collecting information about your media library. Check out some of our apps, and then click <b>Finish<\/b> to view the <b>Server Dashboard<\/b>.",
+    "LabelConfigureSettings": "Muuta asetuksia",
+    "LabelEnableVideoImageExtraction": "Ota video kuvan purku k\u00e4ytt\u00f6\u00f6n",
+    "VideoImageExtractionHelp": "Videot jotka eiv\u00e4t sisll\u00e4 valmiiksi kuvaa ja emme voi lis\u00e4t\u00e4 kuvaa automaattisesti internetist\u00e4. T\u00e4m\u00e4 lis\u00e4\u00e4 v\u00e4h\u00e4n lataus aikaa kirjaston tarkastuksessa.",
+    "LabelEnableChapterImageExtractionForMovies": "Valitse luvun kuva Elokuville",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
+    "LabelEnableAutomaticPortMapping": "Ota automaattinen porttien mapping k\u00e4ytt\u00f6\u00f6n",
+    "LabelEnableAutomaticPortMappingHelp": "UPnP sallii automaattisen reitittimen asetusten muuttamisen. T\u00e4m\u00e4 ei mahdollisesti toimi joidenkin retititin mallien kanssa.",
+    "HeaderTermsOfService": "Emby Terms of Service",
+    "MessagePleaseAcceptTermsOfService": "Please accept the terms of service and privacy policy before continuing.",
+    "OptionIAcceptTermsOfService": "I accept the terms of service",
+    "ButtonPrivacyPolicy": "Privacy policy",
+    "ButtonTermsOfService": "Terms of Service",
+    "HeaderDeveloperOptions": "Developer Options",
+    "OptionEnableWebClientResponseCache": "Enable web client response caching",
+    "OptionDisableForDevelopmentHelp": "Configure these as needed for web client development purposes.",
+    "OptionEnableWebClientResourceMinification": "Enable web client resource minification",
+    "LabelDashboardSourcePath": "Web client source path:",
+    "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
+    "ButtonConvertMedia": "Convert media",
+    "ButtonOrganize": "Organize",
+    "LinkedToEmbyConnect": "Linked to Emby Connect",
+    "HeaderSupporterBenefits": "Supporter Benefits",
+    "HeaderAddUser": "Add User",
+    "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
+    "LabelPinCode": "Pin code:",
+    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
+    "HeaderSync": "Sync",
+    "ButtonOk": "Ok",
+    "ButtonCancel": "Lopeta",
+    "ButtonExit": "Exit",
+    "ButtonNew": "New",
+    "HeaderTV": "TV",
+    "HeaderAudio": "Audio",
+    "HeaderVideo": "Video",
+    "HeaderPaths": "Paths",
+    "CategorySync": "Sync",
+    "TabPlaylist": "Playlist",
+    "HeaderEasyPinCode": "Easy Pin Code",
+    "HeaderGrownupsOnly": "Grown-ups Only!",
+    "DividerOr": "-- or --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
+    "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
+    "ButtonConfigurePinCode": "Configure pin code",
+    "HeaderAdultsReadHere": "Adults Read Here!",
+    "RegisterWithPayPal": "Register with PayPal",
+    "HeaderSyncRequiresSupporterMembership": "Sync Requires a Supporter Membership",
+    "HeaderEnjoyDayTrial": "Enjoy a 14 Day Free Trial",
+    "LabelSyncTempPath": "Temporary file path:",
+    "LabelSyncTempPathHelp": "Specify a custom sync working folder. Converted media created during the sync process will be stored here.",
+    "LabelCustomCertificatePath": "Custom certificate path:",
+    "LabelCustomCertificatePathHelp": "Supply your own ssl certificate .pfx file. If omitted, the server will create a self-signed certificate.",
+    "TitleNotifications": "Notifications",
+    "ButtonDonateWithPayPal": "Donate with PayPal",
+    "OptionDetectArchiveFilesAsMedia": "Detect archive files as media",
+    "OptionDetectArchiveFilesAsMediaHelp": "If enabled, files with .rar and .zip extensions will be detected as media files.",
+    "LabelEnterConnectUserName": "User name or email:",
+    "LabelEnterConnectUserNameHelp": "This is your Emby online account user name or password.",
+    "LabelEnableEnhancedMovies": "Enable enhanced movie displays",
+    "LabelEnableEnhancedMoviesHelp": "When enabled, movies will be displayed as folders to include trailers, extras, cast & crew, and other related content.",
+    "HeaderSyncJobInfo": "Sync Job",
+    "FolderTypeMixed": "Mixed content",
+    "FolderTypeMovies": "Movies",
+    "FolderTypeMusic": "Music",
+    "FolderTypeAdultVideos": "Adult videos",
+    "FolderTypePhotos": "Photos",
+    "FolderTypeMusicVideos": "Music videos",
+    "FolderTypeHomeVideos": "Home videos",
+    "FolderTypeGames": "Games",
+    "FolderTypeBooks": "Books"
 }
