--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -1,4 +1,5 @@
 {
+    "TabWebClient": "Client Web",
     "LabelExit": "Quitter",
     "LabelVisitCommunity": "Visiter la Communaut\u00e9",
     "LabelGithub": "Github",
@@ -797,6 +798,7 @@
     "LabelMaxBitrateHelp": "Sp\u00e9cifiez un d\u00e9bit maximum dans les environnements avec bande passante limit\u00e9e ou si l'appareil impose sa propre limite.",
     "LabelMaxStreamingBitrate": "D\u00e9bit max de streaming :",
     "LabelMaxStreamingBitrateHelp": "Sp\u00e9cifiez le d\u00e9bit max lors du streaming.",
+    "LabelMaxChromecastBitrate": "Max Chromecast bitrate:",
     "LabelMaxStaticBitrate": "D\u00e9bit max de synchronisation :",
     "LabelMaxStaticBitrateHelp": "Sp\u00e9cifiez un d\u00e9bit max pour la synchronisation de contenu en haute qualit\u00e9.",
     "LabelMusicStaticBitrate": "D\u00e9bit de synchronisation de la musique",
@@ -872,7 +874,7 @@
     "MessageNoSubtitleSearchResultsFound": "Aucun r\u00e9sultat trouv\u00e9.",
     "TabDisplay": "Affichage",
     "TabLanguages": "Langues",
-    "TabWebClient": "Client Web",
+    "TabAppSettings": "App Settings",
     "LabelEnableThemeSongs": "Activer les chansons th\u00e8mes",
     "LabelEnableBackdrops": "Activer les images d'arri\u00e8re-plans",
     "LabelEnableThemeSongsHelp": "Si activ\u00e9, les chansons th\u00e8mes seront lues en arri\u00e8re-plan pendant la navigation dans les biblioth\u00e8ques.",
@@ -1416,6 +1418,20 @@
     "MyPreferencesWelcomeMessage2": "Voulez-vous d\u00e9finir vos pr\u00e9f\u00e9rences maintenant ?",
     "ToAccessPreferencesHelp": "Pour acc\u00e9der plus tard \u00e0 vos pr\u00e9f\u00e9rences, cliquez sur l'ic\u00f4ne utilisateur dans le bandeau en haut \u00e0 droite et s\u00e9lectionnez Mes pr\u00e9f\u00e9rences.",
     "HeaderViewStyles": "Styles d'affichage",
-    "LabelSelectViewStyles": "Activer les pr\u00e9sentations enrichies",
-    "LabelSelectViewStylesHelp": "Si vous activez cette option, l'affichage utilisera les m\u00e9tadonn\u00e9es pour ajouter des cat\u00e9gories telles que Suggestions, Derni\u00e8res, Genres, ... Si vous d\u00e9sactivez cette option, l'affichage sera simplement bas\u00e9 sur les dossiers."
+    "LabelSelectViewStyles": "Enable enhanced presentations for:",
+    "LabelSelectViewStylesHelp": "Si vous activez cette option, l'affichage utilisera les m\u00e9tadonn\u00e9es pour ajouter des cat\u00e9gories telles que Suggestions, Derni\u00e8res, Genres, ... Si vous d\u00e9sactivez cette option, l'affichage sera simplement bas\u00e9 sur les dossiers.",
+    "TabPhotos": "Photos",
+    "TabVideos": "Videos",
+    "HeaderWelcomeToEmby": "Welcome to Emby",
+    "EmbyIntroMessage": "With Emby you can easily stream videos, music and photos to smart phones, tablets and other devices from your Emby Server.",
+    "ButtonSkip": "Skip",
+    "TextConnectToServerManually": "Connect to server manually",
+    "ButtonSignInWithConnect": "Sign in with Emby Connect",
+    "ButtonConnect": "Connect",
+    "LabelServerHost": "Host:",
+    "LabelServerHostHelp": "192.168.1.100 or https:\/\/myserver.com",
+    "LabelServerPort": "Port:",
+    "HeaderNewServer": "New Server",
+    "ButtonChangeServer": "Change Server",
+    "HeaderConnectToServer": "Connect to Server"
 }
