--- a/MediaBrowser.Server.Implementations/Localization/Server/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/it.json
@@ -1,23 +1,5 @@
 {
-    "LabelExit": "Esci",
-    "LabelVisitCommunity": "Visita la Community",
-    "LabelGithub": "Github",
-    "LabelSwagger": "Swagger",
-    "LabelStandard": "Standard",
-    "LabelApiDocumentation": "Documentazione sulle Api",
-    "LabelDeveloperResources": "Risorse per i programmatori",
-    "LabelBrowseLibrary": "Esplora la libreria",
-    "LabelConfigureServer": "Configura Emby",
-    "LabelOpenLibraryViewer": "Apri visualizzatore libreria",
-    "LabelRestartServer": "Riavvia Server",
-    "LabelShowLogWindow": "Mostra finestra dei log",
-    "LabelPrevious": "Precedente",
-    "LabelFinish": "Finito",
-    "LabelNext": "Prossimo",
-    "LabelYoureDone": "Hai Finito!",
-    "WelcomeToProject": "Benvenuto in Emby",
-    "ThisWizardWillGuideYou": "Questa procedura ti guider\u00e0 durante il processo di installazione. Per cominciare, per favore seleziona la tua lingua preferita",
-    "TellUsAboutYourself": "Parlaci di te",
+    "TabWebClient": "Dispositivi Web",
     "ButtonQuickStartGuide": "Guida rapida",
     "LabelYourFirstName": "Nome",
     "MoreUsersCanBeAddedLater": "Puoi aggiungere altri utenti in un secondo momento all'interno del pannello di configurazione",
@@ -797,6 +779,7 @@
     "LabelMaxBitrateHelp": "Specificare un bitrate massimo in presenza di larghezza di banda limitata, o se il dispositivo impone il proprio limite.",
     "LabelMaxStreamingBitrate": "Massimo Bitrate streaming",
     "LabelMaxStreamingBitrateHelp": "Specifica il bitrate massimo per lo streaming",
+    "LabelMaxChromecastBitrate": "Max Chromecast bitrate:",
     "LabelMaxStaticBitrate": "Massimo sinc. Bitrate",
     "LabelMaxStaticBitrateHelp": "Specifica il bitrate massimo quando sincronizzi ad alta qualit\u00e0",
     "LabelMusicStaticBitrate": "Musica sync bitrate:",
@@ -872,7 +855,7 @@
     "MessageNoSubtitleSearchResultsFound": "Nessun elemento trovato",
     "TabDisplay": "Schermo",
     "TabLanguages": "Lingue",
-    "TabWebClient": "Dispositivi Web",
+    "TabAppSettings": "App Settings",
     "LabelEnableThemeSongs": "Abilita tema canzoni",
     "LabelEnableBackdrops": "Abilita gli sfondi",
     "LabelEnableThemeSongsHelp": "Se abiltato le canzoni a tema saranno riprodotte mentre visualizzi la tua libreria",
@@ -1416,6 +1399,39 @@
     "MyPreferencesWelcomeMessage2": "Desideri impostare le tue preferenze ora?",
     "ToAccessPreferencesHelp": "Per accedere alle preferenze in un secondo tempo, fare clic sull'icona utente presente in alto a destra e seleziona Le Mie Preferenze.",
     "HeaderViewStyles": "Stili Viste",
-    "LabelSelectViewStyles": "Abilita presentazioni arricchite per:",
-    "LabelSelectViewStylesHelp": "Se abilitato, le viste verranno create con i metadati per offrire categorie come Suggeriti, Recenti, Generi e altro. Se disabilitato, verranno mostrate come semplici cartelle."
+    "LabelSelectViewStyles": "Enable enhanced presentations for:",
+    "LabelSelectViewStylesHelp": "Se abilitato, le viste verranno create con i metadati per offrire categorie come Suggeriti, Recenti, Generi e altro. Se disabilitato, verranno mostrate come semplici cartelle.",
+    "TabPhotos": "Photos",
+    "TabVideos": "Videos",
+    "HeaderWelcomeToEmby": "Welcome to Emby",
+    "EmbyIntroMessage": "With Emby you can easily stream videos, music and photos to smart phones, tablets and other devices from your Emby Server.",
+    "ButtonSkip": "Skip",
+    "TextConnectToServerManually": "Connect to server manually",
+    "ButtonSignInWithConnect": "Sign in with Emby Connect",
+    "ButtonConnect": "Connect",
+    "LabelServerHost": "Host:",
+    "LabelServerHostHelp": "192.168.1.100 or https:\/\/myserver.com",
+    "LabelServerPort": "Port:",
+    "HeaderNewServer": "New Server",
+    "ButtonChangeServer": "Change Server",
+    "HeaderConnectToServer": "Connect to Server",
+    "LabelExit": "Esci",
+    "LabelVisitCommunity": "Visita la Community",
+    "LabelGithub": "Github",
+    "LabelSwagger": "Swagger",
+    "LabelStandard": "Standard",
+    "LabelApiDocumentation": "Documentazione sulle Api",
+    "LabelDeveloperResources": "Risorse per i programmatori",
+    "LabelBrowseLibrary": "Esplora la libreria",
+    "LabelConfigureServer": "Configura Emby",
+    "LabelOpenLibraryViewer": "Apri visualizzatore libreria",
+    "LabelRestartServer": "Riavvia Server",
+    "LabelShowLogWindow": "Mostra finestra dei log",
+    "LabelPrevious": "Precedente",
+    "LabelFinish": "Finito",
+    "LabelNext": "Prossimo",
+    "LabelYoureDone": "Hai Finito!",
+    "WelcomeToProject": "Benvenuto in Emby",
+    "ThisWizardWillGuideYou": "Questa procedura ti guider\u00e0 durante il processo di installazione. Per cominciare, per favore seleziona la tua lingua preferita",
+    "TellUsAboutYourself": "Parlaci di te"
 }
