--- a/MediaBrowser.Server.Implementations/Localization/Server/ko.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/ko.json
@@ -1,15 +1,5 @@
 {
-    "LabelExit": "Schweinsteiger",
-    "LabelVisitCommunity": "Visit Community",
-    "LabelGithub": "Github",
-    "LabelSwagger": "Swagger",
-    "LabelStandard": "Standard",
-    "LabelApiDocumentation": "Api Documentation",
-    "LabelDeveloperResources": "Developer Resources",
-    "LabelBrowseLibrary": "Browse Library",
-    "LabelConfigureServer": "Configure Emby",
-    "LabelOpenLibraryViewer": "Open Library Viewer",
-    "LabelRestartServer": "Restart Server",
+    "TabWebClient": "Web Client",
     "LabelShowLogWindow": "Show Log Window",
     "LabelPrevious": "Previous",
     "LabelFinish": "Finish",
@@ -797,6 +787,7 @@
     "LabelMaxBitrateHelp": "Specify a max bitrate in bandwidth constrained environments, or if the device imposes it's own limit.",
     "LabelMaxStreamingBitrate": "Max streaming bitrate:",
     "LabelMaxStreamingBitrateHelp": "Specify a max bitrate when streaming.",
+    "LabelMaxChromecastBitrate": "Max Chromecast bitrate:",
     "LabelMaxStaticBitrate": "Max sync bitrate:",
     "LabelMaxStaticBitrateHelp": "Specify a max bitrate when syncing content at high quality.",
     "LabelMusicStaticBitrate": "Music sync bitrate:",
@@ -872,7 +863,7 @@
     "MessageNoSubtitleSearchResultsFound": "No search results founds.",
     "TabDisplay": "Display",
     "TabLanguages": "Languages",
-    "TabWebClient": "Web Client",
+    "TabAppSettings": "App Settings",
     "LabelEnableThemeSongs": "Enable theme songs",
     "LabelEnableBackdrops": "Enable backdrops",
     "LabelEnableThemeSongsHelp": "If enabled, theme songs will be played in the background while browsing the library.",
@@ -1416,6 +1407,31 @@
     "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
     "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences.",
     "HeaderViewStyles": "View Styles",
-    "LabelSelectViewStyles": "Enable rich presentations for:",
-    "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders."
+    "LabelSelectViewStyles": "Enable enhanced presentations for:",
+    "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders.",
+    "TabPhotos": "Photos",
+    "TabVideos": "Videos",
+    "HeaderWelcomeToEmby": "Welcome to Emby",
+    "EmbyIntroMessage": "With Emby you can easily stream videos, music and photos to smart phones, tablets and other devices from your Emby Server.",
+    "ButtonSkip": "Skip",
+    "TextConnectToServerManually": "Connect to server manually",
+    "ButtonSignInWithConnect": "Sign in with Emby Connect",
+    "ButtonConnect": "Connect",
+    "LabelServerHost": "Host:",
+    "LabelServerHostHelp": "192.168.1.100 or https:\/\/myserver.com",
+    "LabelServerPort": "Port:",
+    "HeaderNewServer": "New Server",
+    "ButtonChangeServer": "Change Server",
+    "HeaderConnectToServer": "Connect to Server",
+    "LabelExit": "Schweinsteiger",
+    "LabelVisitCommunity": "Visit Community",
+    "LabelGithub": "Github",
+    "LabelSwagger": "Swagger",
+    "LabelStandard": "Standard",
+    "LabelApiDocumentation": "Api Documentation",
+    "LabelDeveloperResources": "Developer Resources",
+    "LabelBrowseLibrary": "Browse Library",
+    "LabelConfigureServer": "Configure Emby",
+    "LabelOpenLibraryViewer": "Open Library Viewer",
+    "LabelRestartServer": "Restart Server"
 }
