--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_PT.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_PT.json
@@ -1,7 +1,5 @@
 {
-    "LabelExit": "Sair",
-    "LabelVisitCommunity": "Visitar a Comunidade",
-    "LabelGithub": "Github",
+    "TabWebClient": "Web Client",
     "LabelSwagger": "Swagger",
     "LabelStandard": "Padr\u00e3o",
     "LabelApiDocumentation": "Documenta\u00e7\u00e3o da API",
@@ -404,8 +402,8 @@
     "ButtonRefresh": "Refresh",
     "ButtonAdvancedRefresh": "Advanced Refresh",
     "OptionPriority": "Prioridade",
-    "OptionRecordOnAllChannels": "Gravar programa em todos os canais",
-    "OptionRecordAnytime": "Gravar programa em qualquer altura",
+    "OptionRecordOnAllChannels": "Record on all channels",
+    "OptionRecordAnytime": "Record at any time",
     "OptionRecordOnlyNewEpisodes": "Gravar apenas novos epis\u00f3dios",
     "HeaderRepeatingOptions": "Repeating Options",
     "HeaderDays": "Dias",
@@ -797,6 +795,7 @@
     "LabelMaxBitrateHelp": "Specify a max bitrate in bandwidth constrained environments, or if the device imposes it's own limit.",
     "LabelMaxStreamingBitrate": "Max streaming bitrate:",
     "LabelMaxStreamingBitrateHelp": "Specify a max bitrate when streaming.",
+    "LabelMaxChromecastBitrate": "Max Chromecast bitrate:",
     "LabelMaxStaticBitrate": "Max sync bitrate:",
     "LabelMaxStaticBitrateHelp": "Specify a max bitrate when syncing content at high quality.",
     "LabelMusicStaticBitrate": "Music sync bitrate:",
@@ -872,7 +871,7 @@
     "MessageNoSubtitleSearchResultsFound": "No search results founds.",
     "TabDisplay": "Display",
     "TabLanguages": "Languages",
-    "TabWebClient": "Web Client",
+    "TabAppSettings": "App Settings",
     "LabelEnableThemeSongs": "Enable theme songs",
     "LabelEnableBackdrops": "Enable backdrops",
     "LabelEnableThemeSongsHelp": "If enabled, theme songs will be played in the background while browsing the library.",
@@ -1416,6 +1415,23 @@
     "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
     "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences.",
     "HeaderViewStyles": "View Styles",
-    "LabelSelectViewStyles": "Enable rich presentations for:",
-    "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders."
+    "LabelSelectViewStyles": "Enable enhanced presentations for:",
+    "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders.",
+    "TabPhotos": "Photos",
+    "TabVideos": "Videos",
+    "HeaderWelcomeToEmby": "Welcome to Emby",
+    "EmbyIntroMessage": "With Emby you can easily stream videos, music and photos to smart phones, tablets and other devices from your Emby Server.",
+    "ButtonSkip": "Skip",
+    "TextConnectToServerManually": "Connect to server manually",
+    "ButtonSignInWithConnect": "Sign in with Emby Connect",
+    "ButtonConnect": "Connect",
+    "LabelServerHost": "Host:",
+    "LabelServerHostHelp": "192.168.1.100 or https:\/\/myserver.com",
+    "LabelServerPort": "Port:",
+    "HeaderNewServer": "New Server",
+    "ButtonChangeServer": "Change Server",
+    "HeaderConnectToServer": "Connect to Server",
+    "LabelExit": "Sair",
+    "LabelVisitCommunity": "Visitar a Comunidade",
+    "LabelGithub": "Github"
 }
