--- a/MediaBrowser.Server.Implementations/Localization/Server/tr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/tr.json
@@ -1,76 +1,5 @@
 {
-    "LabelExit": "Cikis",
-    "LabelVisitCommunity": "Bizi Ziyaret Edin",
-    "LabelGithub": "Github",
-    "LabelSwagger": "Swagger",
-    "LabelStandard": "Standart",
-    "LabelApiDocumentation": "Api Documentation",
-    "LabelDeveloperResources": "Developer Resources",
-    "LabelBrowseLibrary": "K\u00fct\u00fcphane",
-    "LabelConfigureServer": "Configure Emby",
-    "LabelOpenLibraryViewer": "K\u00fct\u00fcphane G\u00f6r\u00fcnt\u00fcleyici",
-    "LabelRestartServer": "Server Yeniden Baslat",
-    "LabelShowLogWindow": "Log Ekran\u0131n\u0131 G\u00f6r\u00fcnt\u00fcle",
-    "LabelPrevious": "\u00d6nceki",
-    "LabelFinish": "Bitir",
-    "LabelNext": "Sonraki",
-    "LabelYoureDone": "Haz\u0131rs\u0131n!",
-    "WelcomeToProject": "Welcome to Emby!",
-    "ThisWizardWillGuideYou": "Bu sihirbaz kurulum i\u015flemi boyunca size yard\u0131mc\u0131 olacakt\u0131r. Ba\u015flamak i\u00e7in, tercih etti\u011finiz dili se\u00e7iniz.",
-    "TellUsAboutYourself": "Kendinizden Bahsedin",
-    "ButtonQuickStartGuide": "Quick start guide",
-    "LabelYourFirstName": "\u0130lk Ad",
-    "MoreUsersCanBeAddedLater": "More users can be added later within the Dashboard.",
-    "UserProfilesIntro": "Emby includes built-in support for user profiles, enabling each user to have their own display settings, playstate and parental controls.",
-    "LabelWindowsService": "Windows Servis",
-    "AWindowsServiceHasBeenInstalled": "Windows Servisi Y\u00fcklenmistir.",
-    "WindowsServiceIntro1": "Emby Server normally runs as a desktop application with a tray icon, but if you prefer to run it as a background service, it can be started from the windows services control panel instead.",
-    "WindowsServiceIntro2": "Windows hizmeti kullan\u0131yorsan\u0131z, o tepsi simgesi olarak ayn\u0131 anda cal\u0131st\u0131rabilirsiniz unutmay\u0131n, b\u00f6ylece hizmetini cal\u0131st\u0131rmak i\u00e7in tepsiyi \u00e7\u0131kmak gerekir l\u00fctfen. Hizmeti de kontrol paneli \u00fczerinden y\u00f6netim ayr\u0131cal\u0131klar\u0131yla yap\u0131land\u0131r\u0131lm\u0131\u015f olmas\u0131 gerekir. Su anda hizmet kendine g\u00fcncelleme m\u00fcmk\u00fcn oldugunu unutmay\u0131n, bu y\u00fczden yeni s\u00fcr\u00fcmleri manuel etkilesimi gerektirir.",
-    "WizardCompleted": "That's all we need for now. Emby has begun collecting information about your media library. Check out some of our apps, and then click <b>Finish<\/b> to view the <b>Server Dashboard<\/b>.",
-    "LabelConfigureSettings": "Ayarlar\u0131 Degistir",
-    "LabelEnableVideoImageExtraction": "Enable video image extraction",
-    "VideoImageExtractionHelp": "For videos that don't already have images, and that we're unable to find internet images for. This will add some additional time to the initial library scan but will result in a more pleasing presentation.",
-    "LabelEnableChapterImageExtractionForMovies": "Extract chapter image extraction for Movies",
-    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
-    "LabelEnableAutomaticPortMapping": "Enable automatic port mapping",
-    "LabelEnableAutomaticPortMappingHelp": "UPnP allows automated router configuration for easy remote access. This may not work with some router models.",
-    "HeaderTermsOfService": "Emby Terms of Service",
-    "MessagePleaseAcceptTermsOfService": "Please accept the terms of service and privacy policy before continuing.",
-    "OptionIAcceptTermsOfService": "I accept the terms of service",
-    "ButtonPrivacyPolicy": "Privacy policy",
-    "ButtonTermsOfService": "Terms of Service",
-    "HeaderDeveloperOptions": "Developer Options",
-    "OptionEnableWebClientResponseCache": "Enable web client response caching",
-    "OptionDisableForDevelopmentHelp": "Configure these as needed for web client development purposes.",
-    "OptionEnableWebClientResourceMinification": "Enable web client resource minification",
-    "LabelDashboardSourcePath": "Web client source path:",
-    "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
-    "ButtonConvertMedia": "Convert media",
-    "ButtonOrganize": "Organize",
-    "LinkedToEmbyConnect": "Linked to Emby Connect",
-    "HeaderSupporterBenefits": "Supporter Benefits",
-    "HeaderAddUser": "Add User",
-    "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
-    "LabelPinCode": "Pin code:",
-    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
-    "HeaderSync": "Sync",
-    "ButtonOk": "Tamam",
-    "ButtonCancel": "\u0130ptal",
-    "ButtonExit": "Exit",
-    "ButtonNew": "Yeni",
-    "HeaderTV": "TV",
-    "HeaderAudio": "Audio",
-    "HeaderVideo": "Video",
-    "HeaderPaths": "Paths",
-    "CategorySync": "Sync",
-    "TabPlaylist": "Playlist",
-    "HeaderEasyPinCode": "Easy Pin Code",
-    "HeaderGrownupsOnly": "Grown-ups Only!",
-    "DividerOr": "-- or --",
-    "HeaderInstalledServices": "Installed Services",
-    "HeaderAvailableServices": "Available Services",
-    "MessageNoServicesInstalled": "No services are currently installed.",
-    "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
+    "TabWebClient": "Web Client",
     "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
     "ButtonConfigurePinCode": "Configure pin code",
     "HeaderAdultsReadHere": "Adults Read Here!",
@@ -404,8 +333,8 @@
     "ButtonRefresh": "Refresh",
     "ButtonAdvancedRefresh": "Advanced Refresh",
     "OptionPriority": "\u00d6ncelik",
-    "OptionRecordOnAllChannels": "T\u00fcm kanallardaki program\u0131 kaydet",
-    "OptionRecordAnytime": "Program\u0131 herhangi bir zamanda kaydet",
+    "OptionRecordOnAllChannels": "Record on all channels",
+    "OptionRecordAnytime": "Record at any time",
     "OptionRecordOnlyNewEpisodes": "Sadece yeni b\u00f6l\u00fcmleri kaydet",
     "HeaderRepeatingOptions": "Repeating Options",
     "HeaderDays": "G\u00fcnler",
@@ -797,6 +726,7 @@
     "LabelMaxBitrateHelp": "Specify a max bitrate in bandwidth constrained environments, or if the device imposes it's own limit.",
     "LabelMaxStreamingBitrate": "Max streaming bitrate:",
     "LabelMaxStreamingBitrateHelp": "Specify a max bitrate when streaming.",
+    "LabelMaxChromecastBitrate": "Max Chromecast bitrate:",
     "LabelMaxStaticBitrate": "Max sync bitrate:",
     "LabelMaxStaticBitrateHelp": "Specify a max bitrate when syncing content at high quality.",
     "LabelMusicStaticBitrate": "Music sync bitrate:",
@@ -872,7 +802,7 @@
     "MessageNoSubtitleSearchResultsFound": "No search results founds.",
     "TabDisplay": "Display",
     "TabLanguages": "Languages",
-    "TabWebClient": "Web Client",
+    "TabAppSettings": "App Settings",
     "LabelEnableThemeSongs": "Enable theme songs",
     "LabelEnableBackdrops": "Enable backdrops",
     "LabelEnableThemeSongsHelp": "If enabled, theme songs will be played in the background while browsing the library.",
@@ -1416,6 +1346,92 @@
     "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
     "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences.",
     "HeaderViewStyles": "View Styles",
-    "LabelSelectViewStyles": "Enable rich presentations for:",
-    "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders."
+    "LabelSelectViewStyles": "Enable enhanced presentations for:",
+    "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders.",
+    "TabPhotos": "Photos",
+    "TabVideos": "Videos",
+    "HeaderWelcomeToEmby": "Welcome to Emby",
+    "EmbyIntroMessage": "With Emby you can easily stream videos, music and photos to smart phones, tablets and other devices from your Emby Server.",
+    "ButtonSkip": "Skip",
+    "TextConnectToServerManually": "Connect to server manually",
+    "ButtonSignInWithConnect": "Sign in with Emby Connect",
+    "ButtonConnect": "Connect",
+    "LabelServerHost": "Host:",
+    "LabelServerHostHelp": "192.168.1.100 or https:\/\/myserver.com",
+    "LabelServerPort": "Port:",
+    "HeaderNewServer": "New Server",
+    "ButtonChangeServer": "Change Server",
+    "HeaderConnectToServer": "Connect to Server",
+    "LabelExit": "Cikis",
+    "LabelVisitCommunity": "Bizi Ziyaret Edin",
+    "LabelGithub": "Github",
+    "LabelSwagger": "Swagger",
+    "LabelStandard": "Standart",
+    "LabelApiDocumentation": "Api Documentation",
+    "LabelDeveloperResources": "Developer Resources",
+    "LabelBrowseLibrary": "K\u00fct\u00fcphane",
+    "LabelConfigureServer": "Configure Emby",
+    "LabelOpenLibraryViewer": "K\u00fct\u00fcphane G\u00f6r\u00fcnt\u00fcleyici",
+    "LabelRestartServer": "Server Yeniden Baslat",
+    "LabelShowLogWindow": "Log Ekran\u0131n\u0131 G\u00f6r\u00fcnt\u00fcle",
+    "LabelPrevious": "\u00d6nceki",
+    "LabelFinish": "Bitir",
+    "LabelNext": "Sonraki",
+    "LabelYoureDone": "Haz\u0131rs\u0131n!",
+    "WelcomeToProject": "Welcome to Emby!",
+    "ThisWizardWillGuideYou": "Bu sihirbaz kurulum i\u015flemi boyunca size yard\u0131mc\u0131 olacakt\u0131r. Ba\u015flamak i\u00e7in, tercih etti\u011finiz dili se\u00e7iniz.",
+    "TellUsAboutYourself": "Kendinizden Bahsedin",
+    "ButtonQuickStartGuide": "Quick start guide",
+    "LabelYourFirstName": "\u0130lk Ad",
+    "MoreUsersCanBeAddedLater": "More users can be added later within the Dashboard.",
+    "UserProfilesIntro": "Emby includes built-in support for user profiles, enabling each user to have their own display settings, playstate and parental controls.",
+    "LabelWindowsService": "Windows Servis",
+    "AWindowsServiceHasBeenInstalled": "Windows Servisi Y\u00fcklenmistir.",
+    "WindowsServiceIntro1": "Emby Server normally runs as a desktop application with a tray icon, but if you prefer to run it as a background service, it can be started from the windows services control panel instead.",
+    "WindowsServiceIntro2": "Windows hizmeti kullan\u0131yorsan\u0131z, o tepsi simgesi olarak ayn\u0131 anda cal\u0131st\u0131rabilirsiniz unutmay\u0131n, b\u00f6ylece hizmetini cal\u0131st\u0131rmak i\u00e7in tepsiyi \u00e7\u0131kmak gerekir l\u00fctfen. Hizmeti de kontrol paneli \u00fczerinden y\u00f6netim ayr\u0131cal\u0131klar\u0131yla yap\u0131land\u0131r\u0131lm\u0131\u015f olmas\u0131 gerekir. Su anda hizmet kendine g\u00fcncelleme m\u00fcmk\u00fcn oldugunu unutmay\u0131n, bu y\u00fczden yeni s\u00fcr\u00fcmleri manuel etkilesimi gerektirir.",
+    "WizardCompleted": "That's all we need for now. Emby has begun collecting information about your media library. Check out some of our apps, and then click <b>Finish<\/b> to view the <b>Server Dashboard<\/b>.",
+    "LabelConfigureSettings": "Ayarlar\u0131 Degistir",
+    "LabelEnableVideoImageExtraction": "Enable video image extraction",
+    "VideoImageExtractionHelp": "For videos that don't already have images, and that we're unable to find internet images for. This will add some additional time to the initial library scan but will result in a more pleasing presentation.",
+    "LabelEnableChapterImageExtractionForMovies": "Extract chapter image extraction for Movies",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
+    "LabelEnableAutomaticPortMapping": "Enable automatic port mapping",
+    "LabelEnableAutomaticPortMappingHelp": "UPnP allows automated router configuration for easy remote access. This may not work with some router models.",
+    "HeaderTermsOfService": "Emby Terms of Service",
+    "MessagePleaseAcceptTermsOfService": "Please accept the terms of service and privacy policy before continuing.",
+    "OptionIAcceptTermsOfService": "I accept the terms of service",
+    "ButtonPrivacyPolicy": "Privacy policy",
+    "ButtonTermsOfService": "Terms of Service",
+    "HeaderDeveloperOptions": "Developer Options",
+    "OptionEnableWebClientResponseCache": "Enable web client response caching",
+    "OptionDisableForDevelopmentHelp": "Configure these as needed for web client development purposes.",
+    "OptionEnableWebClientResourceMinification": "Enable web client resource minification",
+    "LabelDashboardSourcePath": "Web client source path:",
+    "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
+    "ButtonConvertMedia": "Convert media",
+    "ButtonOrganize": "Organize",
+    "LinkedToEmbyConnect": "Linked to Emby Connect",
+    "HeaderSupporterBenefits": "Supporter Benefits",
+    "HeaderAddUser": "Add User",
+    "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
+    "LabelPinCode": "Pin code:",
+    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
+    "HeaderSync": "Sync",
+    "ButtonOk": "Tamam",
+    "ButtonCancel": "\u0130ptal",
+    "ButtonExit": "Exit",
+    "ButtonNew": "Yeni",
+    "HeaderTV": "TV",
+    "HeaderAudio": "Audio",
+    "HeaderVideo": "Video",
+    "HeaderPaths": "Paths",
+    "CategorySync": "Sync",
+    "TabPlaylist": "Playlist",
+    "HeaderEasyPinCode": "Easy Pin Code",
+    "HeaderGrownupsOnly": "Grown-ups Only!",
+    "DividerOr": "-- or --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code"
 }
