--- a/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
@@ -1,4 +1,5 @@
 {
+    "TabWebClient": "Web\u5ba2\u6237\u7aef",
     "LabelExit": "\u9000\u51fa",
     "LabelVisitCommunity": "\u8bbf\u95ee\u793e\u533a",
     "LabelGithub": "Github",
@@ -404,8 +405,8 @@
     "ButtonRefresh": "\u5237\u65b0",
     "ButtonAdvancedRefresh": "\u9ad8\u7ea7\u5237\u65b0",
     "OptionPriority": "\u4f18\u5148",
-    "OptionRecordOnAllChannels": "\u5f55\u5236\u6240\u6709\u9891\u9053",
-    "OptionRecordAnytime": "\u5f55\u5236\u6240\u6709\u65f6\u6bb5",
+    "OptionRecordOnAllChannels": "Record on all channels",
+    "OptionRecordAnytime": "Record at any time",
     "OptionRecordOnlyNewEpisodes": "\u53ea\u5f55\u5236\u65b0\u5267\u96c6",
     "HeaderRepeatingOptions": "Repeating Options",
     "HeaderDays": "\u5929",
@@ -797,6 +798,7 @@
     "LabelMaxBitrateHelp": "\u6307\u5b9a\u5728\u5e26\u5bbd\u53d7\u9650\u7684\u73af\u5883\u6700\u5927\u6bd4\u7279\u7387\uff0c\u6216\u8005\u8bbe\u5907\u6309\u5b83\u81ea\u5df1\u7684\u6700\u5927\u9650\u5ea6\u8fd0\u4f5c\u3002",
     "LabelMaxStreamingBitrate": "\u6700\u5927\u5a92\u4f53\u6d41\u6bd4\u7279\u7387\uff1a",
     "LabelMaxStreamingBitrateHelp": "\u8f6c\u6362\u5a92\u4f53\u6d41\u65f6\uff0c\u8bf7\u6307\u5b9a\u4e00\u4e2a\u6700\u5927\u6bd4\u7279\u7387\u3002",
+    "LabelMaxChromecastBitrate": "Max Chromecast bitrate:",
     "LabelMaxStaticBitrate": "\u6700\u5927\u540c\u6b65\u6bd4\u7279\u7387\uff1a",
     "LabelMaxStaticBitrateHelp": "\u540c\u6b65\u7684\u9ad8\u54c1\u8d28\u7684\u5185\u5bb9\u65f6\uff0c\u8bf7\u6307\u5b9a\u4e00\u4e2a\u6700\u5927\u6bd4\u7279\u7387\u3002",
     "LabelMusicStaticBitrate": "\u97f3\u4e50\u540c\u6b65\u6bd4\u7279\u7387\uff1a",
@@ -872,7 +874,7 @@
     "MessageNoSubtitleSearchResultsFound": "\u641c\u7d22\u65e0\u7ed3\u679c",
     "TabDisplay": "\u663e\u793a",
     "TabLanguages": "\u8bed\u8a00",
-    "TabWebClient": "Web\u5ba2\u6237\u7aef",
+    "TabAppSettings": "App Settings",
     "LabelEnableThemeSongs": "\u542f\u7528\u4e3b\u9898\u6b4c",
     "LabelEnableBackdrops": "\u542f\u7528\u80cc\u666f\u56fe",
     "LabelEnableThemeSongsHelp": "\u5982\u679c\u542f\u7528\uff0c\u5f53\u6d4f\u89c8\u5a92\u4f53\u5e93\u65f6\u4e3b\u9898\u6b4c\u5c06\u5728\u540e\u53f0\u64ad\u653e\u3002",
@@ -1416,6 +1418,20 @@
     "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
     "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences.",
     "HeaderViewStyles": "View Styles",
-    "LabelSelectViewStyles": "Enable rich presentations for:",
-    "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders."
+    "LabelSelectViewStyles": "Enable enhanced presentations for:",
+    "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders.",
+    "TabPhotos": "Photos",
+    "TabVideos": "Videos",
+    "HeaderWelcomeToEmby": "Welcome to Emby",
+    "EmbyIntroMessage": "With Emby you can easily stream videos, music and photos to smart phones, tablets and other devices from your Emby Server.",
+    "ButtonSkip": "Skip",
+    "TextConnectToServerManually": "Connect to server manually",
+    "ButtonSignInWithConnect": "Sign in with Emby Connect",
+    "ButtonConnect": "Connect",
+    "LabelServerHost": "Host:",
+    "LabelServerHostHelp": "192.168.1.100 or https:\/\/myserver.com",
+    "LabelServerPort": "Port:",
+    "HeaderNewServer": "New Server",
+    "ButtonChangeServer": "Change Server",
+    "HeaderConnectToServer": "Connect to Server"
 }
