--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/be_BY.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/be_BY.json
@@ -1,35 +1,35 @@
 {
-    "SettingsSaved": "L\u01b0u c\u00e1c c\u00e0i \u0111\u1eb7t.",
-    "AddUser": "Th\u00eam ng\u01b0\u1eddi d\u00f9ng",
-    "Users": "Ng\u01b0\u1eddi d\u00f9ng",
-    "Delete": "X\u00f3a",
-    "Administrator": "Ng\u01b0\u1eddi qu\u1ea3n tr\u1ecb",
-    "Password": "M\u1eadt kh\u1ea9u",
-    "DeleteImage": "X\u00f3a h\u00ecnh \u1ea3nh",
+    "SettingsSaved": "Settings saved.",
+    "AddUser": "Add User",
+    "Users": "Users",
+    "Delete": "Delete",
+    "Administrator": "Administrator",
+    "Password": "Password",
+    "DeleteImage": "Delete Image",
     "MessageThankYouForSupporting": "Thank you for supporting Emby.",
     "MessagePleaseSupportProject": "Please support Emby.",
-    "DeleteImageConfirmation": "B\u1ea1n c\u00f3 ch\u1eafc mu\u1ed1n x\u00f3a h\u00ecnh \u1ea3nh n\u00e0y?",
-    "FileReadCancelled": "T\u1ec7p tin \u0111\u1ecdc \u0111\u00e3 b\u1ecb h\u1ee7y.",
-    "FileNotFound": "Kh\u00f4ng t\u00ecm th\u1ea5y t\u1ec7p tin.",
-    "FileReadError": "C\u00f3 m\u1ed9t l\u1ed7i x\u1ea3y ra khi \u0111\u1ecdc t\u1ec7p tin n\u00e0y.",
-    "DeleteUser": "X\u00f3a ng\u01b0\u1eddi d\u00f9ng",
+    "DeleteImageConfirmation": "Are you sure you wish to delete this image?",
+    "FileReadCancelled": "The file read has been canceled.",
+    "FileNotFound": "File not found.",
+    "FileReadError": "An error occurred while reading the file.",
+    "DeleteUser": "Delete User",
     "DeleteUserConfirmation": "Are you sure you wish to delete this user?",
     "PasswordResetHeader": "Reset Password",
-    "PasswordResetComplete": "M\u1eadt kh\u1ea9u \u0111\u00e3 \u0111\u01b0\u1ee3c reset",
+    "PasswordResetComplete": "The password has been reset.",
     "PinCodeResetComplete": "The pin code has been reset.",
-    "PasswordResetConfirmation": "B\u1ea1n c\u00f3 ch\u1eafc mu\u1ed1n reset m\u1eadt kh\u1ea9u?",
+    "PasswordResetConfirmation": "Are you sure you wish to reset the password?",
     "PinCodeResetConfirmation": "Are you sure you wish to reset the pin code?",
     "HeaderPinCodeReset": "Reset Pin Code",
-    "PasswordSaved": "M\u1eadt kh\u1ea9u \u0111\u00e3 \u0111\u01b0\u1ee3c l\u01b0u.",
-    "PasswordMatchError": "M\u1eadt kh\u1ea9u v\u00e0 m\u1eadt kh\u1ea9u x\u00e1c nh\u1eadn c\u1ea7n ph\u1ea3i kh\u1edbp nhau .",
-    "OptionRelease": "Ph\u00e1t h\u00e0nh ch\u00ednh th\u1ee9c",
+    "PasswordSaved": "Password saved.",
+    "PasswordMatchError": "Password and password confirmation must match.",
+    "OptionRelease": "Official Release",
     "OptionBeta": "Beta",
-    "OptionDev": "Kh\u00f4ng \u1ed5n \u0111\u1ecbnh",
-    "UninstallPluginHeader": "G\u1ee1 b\u1ecf Plugin",
-    "UninstallPluginConfirmation": "B\u1ea1n c\u00f3 ch\u1eafc mu\u1ed1n g\u1ee1 b\u1ecf{0}?",
-    "NoPluginConfigurationMessage": "Plugin n\u00e0y kh\u00f4ng c\u00f3 g\u00ec \u0111\u1ec3 c\u1ea5u h\u00ecnh.",
-    "NoPluginsInstalledMessage": "B\u1ea1n \u0111\u00e3 ch\u01b0a c\u00e0i \u0111\u1eb7t c\u00e1c plugin.",
-    "BrowsePluginCatalogMessage": "Duy\u1ec7t qua c\u00e1c danh m\u1ee5c plugin c\u1ee7a ch\u00fang t\u00f4i \u0111\u1ec3 xem c\u00e1c plugin c\u00f3 s\u1eb5n.",
+    "OptionDev": "Dev (Unstable)",
+    "UninstallPluginHeader": "Uninstall Plugin",
+    "UninstallPluginConfirmation": "Are you sure you wish to uninstall {0}?",
+    "NoPluginConfigurationMessage": "This plugin has nothing to configure.",
+    "NoPluginsInstalledMessage": "You have no plugins installed.",
+    "BrowsePluginCatalogMessage": "Browse our plugin catalog to view available plugins.",
     "MessageKeyEmailedTo": "Key emailed to {0}.",
     "MessageKeysLinked": "Keys linked.",
     "HeaderConfirmation": "Confirmation",
@@ -50,7 +50,7 @@
     "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
     "ValueTimeLimitSingleHour": "Time limit: 1 hour",
     "ValueTimeLimitMultiHour": "Time limit: {0} hours",
-    "HeaderUsers": "d\u00f9ng",
+    "HeaderUsers": "Users",
     "PluginCategoryGeneral": "General",
     "PluginCategoryContentProvider": "Content Providers",
     "PluginCategoryScreenSaver": "Screen Savers",
@@ -72,7 +72,7 @@
     "LabelCancelled": "(cancelled)",
     "LabelFailed": "(failed)",
     "ButtonHelp": "Help",
-    "ButtonSave": "L\u01b0u",
+    "ButtonSave": "Save",
     "ButtonDownload": "Download",
     "SyncJobStatusQueued": "Queued",
     "SyncJobStatusConverting": "Converting",
@@ -172,13 +172,13 @@
     "MessageRecordingDeleted": "Recording deleted.",
     "ButonCancelRecording": "Cancel Recording",
     "MessageRecordingSaved": "Recording saved.",
-    "OptionSunday": "Ch\u1ee7 Nh\u1eadt",
-    "OptionMonday": "Th\u1ee9 Hai",
+    "OptionSunday": "Sunday",
+    "OptionMonday": "Monday",
     "OptionTuesday": "Tuesday",
     "OptionWednesday": "Wednesday",
     "OptionThursday": "Thursday",
     "OptionFriday": "Friday",
-    "OptionSaturday": "Th\u1ee9 B\u1ea3y",
+    "OptionSaturday": "Saturday",
     "OptionEveryday": "Every day",
     "OptionWeekend": "Weekends",
     "OptionWeekday": "Weekdays",
@@ -204,7 +204,7 @@
     "MessagePleaseSelectTwoItems": "Please select at least two items.",
     "MessageTheFollowingItemsWillBeGrouped": "The following titles will be grouped into one item:",
     "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
-    "HeaderResume": "S\u01a1 y\u1ebfu l\u00fd l\u1ecbch",
+    "HeaderResume": "Resume",
     "HeaderMyViews": "My Views",
     "HeaderLibraryFolders": "Media Folders",
     "HeaderLatestMedia": "Latest Media",
@@ -228,8 +228,8 @@
     "HeaderSelectChannelDownloadPath": "Select Channel Download Path",
     "HeaderSelectChannelDownloadPathHelp": "Browse or enter the path to use for storing channel cache files. The folder must be writeable.",
     "OptionNewCollection": "New...",
-    "ButtonAdd": "Th\u00eam",
-    "ButtonRemove": "G\u1ee1 b\u1ecf",
+    "ButtonAdd": "Add",
+    "ButtonRemove": "Remove",
     "LabelChapterDownloaders": "Chapter downloaders:",
     "LabelChapterDownloadersHelp": "Enable and rank your preferred chapter downloaders in order of priority. Lower priority downloaders will only be used to fill in missing information.",
     "HeaderFavoriteAlbums": "Favorite Albums",
@@ -276,7 +276,7 @@
     "ButtonRemoteControl": "Remote Control",
     "HeaderLatestTvRecordings": "Latest Recordings",
     "ButtonOk": "Ok",
-    "ButtonCancel": "Tho\u00e1t",
+    "ButtonCancel": "Cancel",
     "ButtonRefresh": "Refresh",
     "LabelCurrentPath": "Current path:",
     "HeaderSelectMediaPath": "Select Media Path",
@@ -301,7 +301,7 @@
     "ButtonReports": "Reports",
     "ButtonMetadataManager": "Metadata Manager",
     "HeaderTime": "Time",
-    "HeaderName": "T\u00ean",
+    "HeaderName": "Name",
     "HeaderAlbum": "Album",
     "HeaderAlbumArtist": "Album Artist",
     "HeaderArtist": "Artist",
@@ -368,7 +368,7 @@
     "OptionGenres": "Genres",
     "OptionParentalRating": "Parental Rating",
     "OptionPeople": "People",
-    "OptionRuntime": "Th\u1eddi gian ph\u00e1t",
+    "OptionRuntime": "Runtime",
     "OptionProductionLocations": "Production Locations",
     "OptionBirthLocation": "Birth Location",
     "LabelAllChannels": "All channels",
@@ -392,7 +392,7 @@
     "LabelPackageInstallCompleted": "{0} installation completed.",
     "LabelPackageInstallFailed": "{0} installation failed.",
     "LabelPackageInstallCancelled": "{0} installation cancelled.",
-    "TabServer": "M\u00e1y ch\u1ee7",
+    "TabServer": "Server",
     "TabUsers": "Users",
     "TabLibrary": "Library",
     "TabMetadata": "Metadata",
@@ -410,13 +410,13 @@
     "ButtonQuality": "Quality",
     "HeaderNotifications": "Notifications",
     "HeaderSelectPlayer": "Select Player:",
-    "ButtonSelect": "L\u1ef1a ch\u1ecdn",
-    "ButtonNew": "M\u1edbi",
+    "ButtonSelect": "Select",
+    "ButtonNew": "New",
     "MessageInternetExplorerWebm": "For best results with Internet Explorer please install the WebM playback plugin.",
     "HeaderVideoError": "Video Error",
     "ButtonAddToPlaylist": "Add to playlist",
     "HeaderAddToPlaylist": "Add to Playlist",
-    "LabelName": "T\u00ean:",
+    "LabelName": "Name:",
     "ButtonSubmit": "Submit",
     "LabelSelectPlaylist": "Playlist:",
     "OptionNewPlaylist": "New playlist...",
@@ -477,7 +477,7 @@
     "PersonTypePerson": "Person",
     "LabelTitleDisplayOrder": "Title display order:",
     "OptionSortName": "Sort name",
-    "OptionReleaseDate": "Release date",
+    "OptionReleaseDate": "\u0414\u0430\u0442\u0430 \u0432\u044b\u0445\u043e\u0434\u0430",
     "LabelSeasonNumber": "Season number:",
     "LabelDiscNumber": "Disc number",
     "LabelParentNumber": "Parent number",
@@ -515,14 +515,14 @@
     "FolderTypeGames": "Games",
     "FolderTypeBooks": "Books",
     "FolderTypeTvShows": "TV",
-    "TabMovies": "C\u00e1c phim",
+    "TabMovies": "Movies",
     "TabSeries": "Series",
-    "TabEpisodes": "C\u00e1c t\u1eadp phim",
+    "TabEpisodes": "Episodes",
     "TabTrailers": "Trailers",
     "TabGames": "Games",
-    "TabAlbums": "C\u00e1c Album",
-    "TabSongs": "C\u00e1c ca kh\u00fac",
-    "TabMusicVideos": "C\u00e1c video \u00e2m nh\u1ea1c",
+    "TabAlbums": "Albums",
+    "TabSongs": "Songs",
+    "TabMusicVideos": "Music Videos",
     "BirthPlaceValue": "Birth place: {0}",
     "DeathDateValue": "Died: {0}",
     "BirthDateValue": "Born: {0}",
