--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -46,7 +46,7 @@
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
     "HeaderConfirmRemoveUser": "Remove User",
-    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Select the device to control by clicking the cast icon in the upper right corner. Swipe down anywhere on this screen to go back to where you came from.",
     "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
     "ValueTimeLimitSingleHour": "Time limit: 1 hour",
     "ValueTimeLimitMultiHour": "Time limit: {0} hours",
@@ -432,6 +432,7 @@
     "HeaderVideo": "Video",
     "HeaderRuntime": "Spilletid",
     "HeaderCommunityRating": "Fellesskap anmeldelse",
+    "HeaderPasswordReset": "Resett passord",
     "HeaderParentalRating": "Foreldresensur",
     "HeaderReleaseDate": "Utgivelsesdato",
     "HeaderDateAdded": "Dato lagt til",
@@ -755,5 +756,11 @@
     "SyncJobItemStatusRemovedFromDevice": "Fjernet fra enheten",
     "SyncJobItemStatusCancelled": "Kansellert",
     "LabelProfile": "Profile:",
-    "LabelBitrateMbps": "Bitrate (Mbps):"
+    "LabelBitrateMbps": "Bitrate (Mbps):",
+    "EmbyIntroDownloadMessage": "To download and install Emby Server visit {0}.",
+    "ButtonNewServer": "New Server",
+    "ButtonSignInWithConnect": "Sign in with Emby Connect",
+    "HeaderNewServer": "New Server",
+    "MyDevice": "My Device",
+    "ButtonRemote": "Remote"
 }
