--- a/MediaBrowser.Server.Implementations/Localization/Server/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/de.json
@@ -1,4 +1,5 @@
 {
+    "TabWebClient": "Webclient",
     "LabelExit": "Beenden",
     "LabelVisitCommunity": "Besuche die Community",
     "LabelGithub": "Github",
@@ -404,8 +405,8 @@
     "ButtonRefresh": "Aktualisieren",
     "ButtonAdvancedRefresh": "Erweiterte Aktualiserung",
     "OptionPriority": "Priorit\u00e4t",
-    "OptionRecordOnAllChannels": "Nehme Programm auf allen Kan\u00e4len auf",
-    "OptionRecordAnytime": "Neme Programm zu jeder Zeit auf",
+    "OptionRecordOnAllChannels": "Record on all channels",
+    "OptionRecordAnytime": "Record at any time",
     "OptionRecordOnlyNewEpisodes": "Nehme nur neue Episoden auf",
     "HeaderRepeatingOptions": "Wiederholungs Einstellungen",
     "HeaderDays": "Tage",
@@ -551,7 +552,7 @@
     "LabelPublicHttpsPort": "\u00d6ffentliche HTTPS Portnummer:",
     "LabelPublicHttpsPortHelp": "Die \u00f6ffentliche Portnummer sollte einem lokalen HTTPS Port zugewiesen werden.",
     "LabelEnableHttps": "Gebe HTTPS als externe Adresse aus",
-    "LabelEnableHttpsHelp": "Falls aktiviert, gibt der Server eine HTTPS URL als seine externe Adresse an die Clients weiter. Dies kann Clients deaktivieren, die kein HTTPS unterst\u00fctzen.",
+    "LabelEnableHttpsHelp": "If enabled, the server will report an https url to clients as it's external address.",
     "LabelHttpsPort": "Lokale HTTPS Portnummer:",
     "LabelHttpsPortHelp": "Die TCP Port-Nummer f\u00fcr sichere Emby https Verbindungen.",
     "LabelWebSocketPortNumber": "Web Socket Port Nummer:",
@@ -797,6 +798,7 @@
     "LabelMaxBitrateHelp": "Lege eine maximale Bitrate, f\u00fcr Anwendungsgebiete mit begrenzter Bandbreite oder bei durch die Endger\u00e4te auferlegten Banbdbreitenbegrenzungen, fest",
     "LabelMaxStreamingBitrate": "Maximale Streamingbitrate",
     "LabelMaxStreamingBitrateHelp": "W\u00e4hle die maximale Bitrate w\u00e4hrend des streamens.",
+    "LabelMaxChromecastBitrate": "Max Chromecast bitrate:",
     "LabelMaxStaticBitrate": "Maximale Synchronisierungsbitrate ",
     "LabelMaxStaticBitrateHelp": "W\u00e4hle die maximale Bitrate f\u00fcr das synchronisieren von Inhalten mit hoher Qualit\u00e4t.",
     "LabelMusicStaticBitrate": "Musik Synchronisierungsbitrate:",
@@ -872,7 +874,7 @@
     "MessageNoSubtitleSearchResultsFound": "Keine Suchergebnisse gefunden",
     "TabDisplay": "Anzeige",
     "TabLanguages": "Sprachen",
-    "TabWebClient": "Webclient",
+    "TabAppSettings": "App Settings",
     "LabelEnableThemeSongs": "Aktiviere Titelmelodie",
     "LabelEnableBackdrops": "Aktiviere Hintergr\u00fcnde",
     "LabelEnableThemeSongsHelp": "Wenn aktiviert, wird die Titelmusik w\u00e4hrend dem Durchsuchen durch die Bibliothek im Hintergrund abgespielt",
@@ -1393,19 +1395,19 @@
     "LabelShowLibraryTileNamesHelp": "Legen Sie fest, ob Beschriftungen unter den Kacheln der Startseite angezeigt werden sollen.",
     "OptionEnableTranscodingThrottle": "aktiviere Drosselung",
     "OptionEnableTranscodingThrottleHelp": "Die Drosselung justiert die Transkodier-Geschwindigkeit, um die Server CPU Auslastung w\u00e4hrend der Wiedergabe zu minimieren.",
-    "LabelUploadSpeedLimit": "Upload Geschwindigkeitslimit (mbps):",
+    "LabelUploadSpeedLimit": "Upload speed limit (Mbps):",
     "OptionAllowSyncTranscoding": "Erlaube Synchronisation die Transkodierung ben\u00f6tigen",
     "HeaderPlayback": "Medien Wiedergabe",
     "OptionAllowAudioPlaybackTranscoding": "Erlaube Audio-Wiedergabe die Transkodierung ben\u00f6tigt",
     "OptionAllowVideoPlaybackTranscoding": "Erlaube Video-Wiedergabe die Transkodierung ben\u00f6tigt",
-    "OptionAllowMediaPlaybackTranscodingHelp": "Benutzer erhalten aussagekr\u00e4ftige Fehlermeldungen gem\u00e4\u00df den Einstellungen, wenn Medien nicht wiedergegeben werden k\u00f6nnen.",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly messages when content is unplayable based on policy.",
     "TabStreaming": "Streaming",
-    "LabelRemoteClientBitrateLimit": "Limitierte Client-Fernzugriff Datenrate (in mbps):",
+    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (Mbps):",
     "LabelRemoteClientBitrateLimitHelp": "Eine optionale Streaming Datengrenze f\u00fcr alle Clients mit Fernzugriff. Dies verhindert, dass Clients eine h\u00f6here Bandbreite als die zur Verf\u00fcgung stehende Verbindung, anfragen.",
     "LabelConversionCpuCoreLimit": "CPU Kerne Limit:",
     "LabelConversionCpuCoreLimitHelp": "Begrenzt die Anzahl der verwendeten CPU Kerne w\u00e4hrend der Konvertierung f\u00fcr die Synchronisation.",
     "OptionEnableFullSpeedConversion": "Aktiviere Hochleistung-Konvertierung.",
-    "OptionEnableFullSpeedConversionHelp": "In der Grundeinstellung wird die Konvertierung f\u00fcr die Synchronisation mit niedriger Geschwindigkeit durchgef\u00fchrt und spart damit System Ressourcen.",
+    "OptionEnableFullSpeedConversionHelp": "By default, sync conversion is performed at a low speed to minimize resource consumption.",
     "HeaderPlaylists": "Wiedergabeliste",
     "HeaderSelectDate": "Datum w\u00e4hlen",
     "HeaderWelcomeExclamation": "Willkommen!",
@@ -1416,6 +1418,20 @@
     "MyPreferencesWelcomeMessage2": "M\u00f6chten Sie Ihre Einstellungen nun festlegen?",
     "ToAccessPreferencesHelp": "Um Ihre Einstellungen sp\u00e4ter zu \u00e4ndern, klicken Sie ihr Benutzer-Icon im oberen rechten Bereich oder w\u00e4hlen Sie \"Meine Einstellungen\".",
     "HeaderViewStyles": "Zeige Stiele",
-    "LabelSelectViewStyles": "Aktiviere erweiterte Darstellungen f\u00fcr:",
-    "LabelSelectViewStylesHelp": "Wenn aktiviert werden Darstellungen von Kategorien mit Medieninformationen wie Empfehlungen, k\u00fcrzlich hinzugef\u00fcgt, Genres und weitere, angereichert. Wenn deaktiviert werden diese nur als simple Verzeichnisse dargestellt."
+    "LabelSelectViewStyles": "Enable enhanced presentations for:",
+    "LabelSelectViewStylesHelp": "Wenn aktiviert werden Darstellungen von Kategorien mit Medieninformationen wie Empfehlungen, k\u00fcrzlich hinzugef\u00fcgt, Genres und weitere, angereichert. Wenn deaktiviert werden diese nur als simple Verzeichnisse dargestellt.",
+    "TabPhotos": "Photos",
+    "TabVideos": "Videos",
+    "HeaderWelcomeToEmby": "Welcome to Emby",
+    "EmbyIntroMessage": "With Emby you can easily stream videos, music and photos to smart phones, tablets and other devices from your Emby Server.",
+    "ButtonSkip": "Skip",
+    "TextConnectToServerManually": "Connect to server manually",
+    "ButtonSignInWithConnect": "Sign in with Emby Connect",
+    "ButtonConnect": "Connect",
+    "LabelServerHost": "Host:",
+    "LabelServerHostHelp": "192.168.1.100 or https:\/\/myserver.com",
+    "LabelServerPort": "Port:",
+    "HeaderNewServer": "New Server",
+    "ButtonChangeServer": "Change Server",
+    "HeaderConnectToServer": "Connect to Server"
 }
